# Noctyl

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: add_edge_extraction.md  add_node_extraction.md  conditional_edges.md  end_node.md  entry_point.md  error_handling.md  golden_tests.md  graph_schema.md  langgraph_detection.md  langgraph_scope.md  phase2_implementation.md  phase2_task1_execution_model.md  phase2_task2_analysis_package.md  phase2_task3_pipeline_integration.md  phase2_task4_tests.md  phase2_task5_documentation.md  repo_scanning.md  stategraph_tracking.md
docs/: Noctyl_Full_Design.md  flow-diagrams.md  phase1-scope.md
docs/phase/: phase1-scope.md  phase2.md  phase3.md
examples/multi_agent_system/: README.md  generate_diagrams.py  parallel_workflow.py  simple_agent.py  workflow.py
noctyl/: __init__.py  cli.py
noctyl/analysis/: __init__.py  analyzer.py  digraph.py  (+4 more)
tests/: test_aggregation.py  test_analysis.py  test_branch_envelope.py  test_cli.py  test_conditional_edges.py  test_edge_extractor.py  test_entry_point.py  test_estimation_model.py  test_example_multi_agent.py  test_execution_model.py  test_golden.py  test_golden_mermaid.py  test_graph_schema.py  test_ingestion_integration.py  test_langgraph_detector.py  test_loop_amplification.py  test_mermaid.py  test_node_extractor.py  test_phase3_comprehensive.py  test_pipeline_integration.py  test_profile_loader.py  test_prompt_detection.py  test_propagation.py  test_receiver_resolution.py  test_repo_scanner.py  test_stategraph_tracker.py  test_token_modeler.py
(+34 files in other folders)
